Reorganize documentation into docs folder with checkpointing guide
- Create docs/ folder for all documentation
- Move README.md and TESTING.md to docs/
- Add comprehensive CHECKPOINTING.md guide:
  * Why checkpointing matters on HPC clusters
  * Three checkpointing approaches (application, user, system level)
  * Tools comparison (DMTCP, BLCR, CRIU)
  * Prime finder implementation with JSON checkpointing
  * SLURM job script example with --requeue
  * Best practices and troubleshooting
- Create new root README.md as project overview
- Links to all documentation from root
- Update CI/CD workflow to lint all markdown files

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -39,7 +39,7 @@ jobs:
         flake8 . --count --max-complexity=10 --max-line-length=79 --statistics
     - name: Lint Markdown with mdformat
       run: |
-        mdformat --check README.md TESTING.md
+        mdformat --check README.md docs/README.md docs/TESTING.md docs/CHECKPOINTING.md
     - name: Test with pytest
       run: |
         pytest test_prime_finder.py -v
